[FIX] fixed spacing

--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -10,6 +10,10 @@
     height: 420px;
 }
 
+.card-base-content {
+    width: 100%;
+}
+
 .wrapper {
     margin-top: 20px;
 }
@@ -24,6 +28,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 20px;
 }
 
 .skillbar-container {
